--- a/package.json
+++ b/package.json
@@ -1,29 +1,26 @@
 {
-  "name": "next-tailwind-boilerplate",
-  "description": "a nextjs and tailwindcss boilerplate by themefisher.com",
-  "version": "1.0.1",
+  "name": "Hydrogen Next Static Site Template",
+  "description": "A WORKING NextJS + Tailwind boilerplate by themefisher/statichunt, revived by asyncjake",
+  "version": "2.0.01",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
-    "dev": "node lib/jsonGenerator.js && next dev",
+    "start": "node lib/jsonGenerator.js && next dev --turbopack",
     "build": "node lib/jsonGenerator.js && next build",
-    "export": "next build && next export",
-    "lint": "next lint",
-    "start": "next start"
+    "export": "NEXT_EXPORT=1 next build",
+    "lint": "next lint"
   },
   "dependencies": {
-    "disqus-react": "^1.1.5",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
     "marked": "^4.2.4",
-    "next": "13.0.7",
-    "next-mdx-remote": "^3",
-    "react": "18.2.0",
+    "next": "^15.2.1",
+    "next-mdx-remote": "^5.0.0",
+    "react": "^18",
     "react-dom": "18.2.0",
     "react-grid-gallery": "^1.0.0",
     "react-gtm-module": "^2.0.11",
     "react-icons": "^4.7.1",
-    "react-image-lightbox": "^5.1.4",
     "react-lite-youtube-embed": "^2.3.52",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-slug": "^5.1.0",
@@ -31,7 +28,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.8",
+    "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.13",
     "date-fns": "^2.29.3",
     "date-fns-tz": "^1.3.7",
@@ -42,7 +39,7 @@
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "sass": "^1.57.1",
-    "sharp": "^0.31.2",
+    "sharp": "^0.33.5",
     "tailwind-bootstrap-grid": "^5.0.1",
     "tailwindcss": "^3.2.4"
   }
